# g7-installer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_CONSTITUTION.md  LICENSE  README.md  SECURITY.md  SPEC.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ops-harness.yml  quality-gate.yml  release.yml
crates/g7-cli/: Cargo.toml
crates/g7-cli/src/: main.rs  tui_setup.rs  web_setup.rs
crates/g7-cli/src/web_setup/: api.rs  artifacts.rs  defaults.rs  provision_actions.rs  recovery.rs  render.rs  routes.rs  session.rs  tests.rs
crates/g7-core/: Cargo.toml
crates/g7-core/src/: app_profile.rs  commands.rs  defaults.rs  error.rs  installer_paths.rs  lib.rs  resource_policy.rs  runtime_resources.rs  vite_manifest.rs
crates/g7-core/src/commands/: doctor.rs  finalize.rs  install.rs  logs.rs  plan.rs  reset.rs  rollback.rs  self_update.rs  status.rs  update.rs
crates/g7-core/src/commands/install/: apps.rs  database.rs  orchestrator.rs  packages.rs  paths.rs  report.rs  runtime.rs  runtime_tests.rs  site.rs  tests.rs  tls.rs  transaction.rs  vhost.rs
crates/g7-core/src/commands/install/apps/: gnuboard7.rs  laravel.rs  runtime.rs  wordpress.rs
crates/g7-core/src/commands/plan/: builder.rs  defaults.rs  normalize.rs  provisioning.rs  resources.rs  sizing.rs  types.rs
crates/g7-release/: Cargo.toml
crates/g7-release/src/: checksum.rs  download.rs  extract.rs  lib.rs
crates/g7-render/: Cargo.toml
crates/g7-render/src/: lib.rs  templates.rs
crates/g7-state/: Cargo.toml
crates/g7-state/src/: atomic.rs  lib.rs  lock.rs  owned_files.rs  state.rs
crates/g7-system/: Cargo.toml
crates/g7-system/src/: account.rs  apache.rs  app.rs  apt.rs  archive.rs  certbot.rs  command.rs  database.rs  lib.rs  mail.rs  network.rs  nginx.rs  os.rs  package.rs  php.rs  port.rs  privilege.rs  probe.rs  redis.rs  service.rs  systemd.rs  ufw.rs
docs/: beginner-install.md  copy-paste-install.md  gnuboard7-runtime-audit.md  governance-controls.md  introduction.md  lightsail-ubuntu24-setup-guide.md  ops-harness-audit.md  promo-manifest.md  sir-board-post.md
scripts/: bootstrap.sh  build-release-assets.sh  check-coverage-ratchet.py  coverage-gate.sh  g7-test-smoke.sh  generate-sbom.py  lightsail-init.sh  local-release-gate.sh  ops-harness.sh  ops_harness.py  quality-gate.sh  quick-gate.sh  rustdoc-gate.sh  setup-auth-smoke.sh  static-gate.sh  structure-audit.py  web-static-smoke.sh  web-ui-e2e.spec.mjs
scripts/tests/: test_coverage_ratchet.py  test_ops_harness.py  test_structure_audit.py
templates/nginx/: g7.conf.tera
templates/systemd/: g7-queue.service.tera  g7-reverb.service.tera
web/: app.js  index.html  input.css  package.json  promo.sample.json  tailwind.config.js
web/modules/: event-stream.js  wizard-config.js
