[workspace]
members = [
    "crates/g7-cli",
    "crates/g7-core",
    "crates/g7-release",
    "crates/g7-render",
    "crates/g7-state",
    "crates/g7-system",
]
resolver = "3"

[workspace.package]
authors = ["G7 Installer contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/jiwonpapa/g7-installer"
rust-version = "1.85"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
