[package]
name = "g7-cli"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "g7inst"
path = "src/main.rs"

[dependencies]
clap.workspace = true
crossterm = "0.28"
dialoguer = "0.11"
g7-core = { path = "../g7-core" }
miette.workspace = true
ratatui = "0.29"
