[package]
name = "g7-cli"
version = "0.2.16"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "g7inst"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
getrandom.workspace = true
g7-core = { path = "../g7-core" }
g7-state = { path = "../g7-state" }
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
