[package]
name = "g7-core"
version = "0.3.0-beta.16"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
g7-state = { path = "../g7-state", version = "=0.3.0-beta.16" }
g7-system = { path = "../g7-system", version = "=0.3.0-beta.16" }
getrandom.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
